--- a/android/app/src/main/res/values-de/strings.xml
+++ b/android/app/src/main/res/values-de/strings.xml
@@ -57,7 +57,7 @@
     
     <!-- Chords - Main Menu -->
     <string name="chord_color_matching">Akkord-Farben Zuordnung</string>
-    <string name="chords_stable_instable">Stabil oder Instabil</string>
+    <string name="chords_stable_unstable">Stabile Instabile Akkorde</string>
     <string name="chord_building">Akkorde Bauen</string>
     <string name="missing_note">Rate die fehlende Note</string>
     <string name="chord_characters">Akkord-Charaktere</string>
@@ -68,8 +68,8 @@
     <string name="chord_color_matching_intro">Höre den Akkord und wähle die Farbe, die am besten dazu passt.</string>
     <string name="play_chord">Akkord spielen</string>
     
-    <!-- Chords - Stable Or Instable Activity -->
-    <string name="chords_stable_instable_intro">Einige Akkorde sind harmonisch und ruhig, während andere Akkorde unharmonisch und unruhig klingen.</string>
+    <!-- Chords - Stable or Unstable Activity -->
+    <string name="chords_stable_unstable_intro">Einige Akkorde sind harmonisch und ruhig, während andere Akkorde unharmonisch und unruhig klingen.</string>
     
     <!-- Chords - Chord Building Activity -->
     <string name="chord_building_title">Baue deine eigenen Akkorde</string>
@@ -100,12 +100,12 @@
     <string name="all_friends_return">Alle Freunde sind zurück! 🐶🐱🐿️🐙</string>
     
     <!-- Stable/Instable Chord Progression Messages -->
-    <string name="stable_instable_level1">Kannst du den Unterschied zwischen stabilen und instabilen Akkorden hören?</string>
-    <string name="stable_instable_level2">Gut gemacht! Jetzt hörst du Septakkorde und alterierte Dominanten! 🎵</string>
-    <string name="stable_instable_level3">Stufe 3: Erweiterte Harmonien vs. polytonale Akkorde! 🎼</string>
-    <string name="stable_instable_level4">Stufe 4: Jazz-Voicings vs. atonale Cluster! 🎹</string>
-    <string name="stable_instable_level5">Stufe 5: Impressionistische Harmonien vs. mikrotonale Variationen! 🎶</string>
-    <string name="stable_instable_level6">Meisterstufe: Komplexe erweiterte Harmonien und raffinierte Dissonanzen! 🏆</string>
+    <string name="stable_unstable_level1">Kannst du den Unterschied zwischen stabilen und instabilen Akkorden hören?</string>
+    <string name="stable_unstable_level2">Gut gemacht! Jetzt hörst du Septakkorde und alterierte Dominanten! 🎵</string>
+    <string name="stable_unstable_level3">Stufe 3: Erweiterte Harmonien vs. polytonale Akkorde! 🎼</string>
+    <string name="stable_unstable_level4">Stufe 4: Jazz-Voicings vs. atonale Cluster! 🎹</string>
+    <string name="stable_unstable_level5">Stufe 5: Impressionistische Harmonien vs. mikrotonale Variationen! 🎶</string>
+    <string name="stable_unstable_level6">Meisterstufe: Komplexe erweiterte Harmonien und raffinierte Dissonanzen! 🏆</string>
     <string name="chords_2_5_master">Du bist Akkordmeister! 🎉</string>
     
     <!-- Mascot Messages for Unlocks -->
@@ -333,7 +333,7 @@
     <string name="welcome_message">Willkommen bei Lalumo!</string>
     <string name="create_name_message">Lass uns einen besonderen Namen nur für dich erstellen!</string>
     <string name="reset_activity">Aktivität zurücksetzen</string>
-    <string name="reset_current_activity">Aktuelle Aktivität zurücksetzen</string>
+    <string name="reset_current_activity">Aktivität zurücksetzen</string>
     <string name="progress_saved_message">Dein Fortschritt wird automatisch gespeichert</string>
     
     <!-- 1_2 Activity Feedback Messages (German) -->
