--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     
     <!-- Chords - Main Menu -->
     <string name="chord_color_matching">Chord Color Matching</string>
-    <string name="chords_stable_instable">Stable Or Unstable</string>
+    <string name="chords_stable_unstable">Stable or Unstable</string>
     <string name="chord_building">Chord Building</string>
     <string name="missing_note">Guess the Missing Note</string>
     <string name="chord_characters">Chord Story Characters</string>
@@ -68,8 +68,8 @@
     <string name="chord_color_matching_intro">Listen to the chord and select the color that matches how it sounds to you.</string>
     <string name="play_chord">Play Chord</string>
     
-    <!-- Chords - Stable Or Instable Activity -->
-    <string name="chords_stable_instable_intro">Some chords are stable and peaceful, while others are unstable and restless.</string>
+    <!-- Chords - Stable or Unstable Activity -->
+    <string name="chords_stable_unstable_intro">Some chords are stable and peaceful, while others are unstable and restless.</string>
     
     <!-- Chords - Chord Building Activity -->
     <string name="chord_building_title">Build Your Own Chords</string>
@@ -99,12 +99,12 @@
     <string name="squirrel_returns">The squirrel is back to help! Octopus still sleeping. 🐿️</string>
     
     <!-- Stable/Instable Chord Progression Messages -->
-    <string name="stable_instable_level1">Can you hear the difference between stable and unstable chords?</string>
-    <string name="stable_instable_level2">Great job! Now listening for seventh chords and altered dominants! 🎵</string>
-    <string name="stable_instable_level3">Level 3: Extended harmonies vs. polytonal chords! 🎼</string>
-    <string name="stable_instable_level4">Level 4: Jazz voicings vs. atonal clusters! 🎹</string>
-    <string name="stable_instable_level5">Level 5: Impressionistic harmonies vs. microtonal variations! 🎶</string>
-    <string name="stable_instable_level6">Master Level: Complex extended harmonies and sophisticated dissonances! 🏆</string>
+    <string name="stable_unstable_level1">Can you hear the difference between stable and unstable chords?</string>
+    <string name="stable_unstable_level2">Great job! Now listening for seventh chords and altered dominants! 🎵</string>
+    <string name="stable_unstable_level3">Level 3: Extended harmonies vs. polytonal chords! 🎼</string>
+    <string name="stable_unstable_level4">Level 4: Jazz voicings vs. atonal clusters! 🎹</string>
+    <string name="stable_unstable_level5">Level 5: Impressionistic harmonies vs. microtonal variations! 🎶</string>
+    <string name="stable_unstable_level6">Master Level: Complex extended harmonies and sophisticated dissonances! 🏆</string>
     <string name="all_friends_return">All friends are back to help you! 🐶🐱🐿️🐙</string>
     <string name="chords_2_5_master">You are Chords Master! 🎉</string>
 
